Bug 160705 - FILESAVE PDF/UA Table caption does not wrap the table as seen in the PAC tool
Summary: FILESAVE PDF/UA Table caption does not wrap the table as seen in the PAC tool
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:25.8.0
Keywords: accessibility
Depends on:
Blocks: PDF-Accessibility
  Show dependency treegraph
 
Reported: 2024-04-17 11:35 UTC by Gabor Kelemen (Collabora)
Modified: 2025-02-24 13:33 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file with table caption (13.74 KB, application/vnd.oasis.opendocument.text)
2024-04-17 11:35 UTC, Gabor Kelemen (Collabora)
Details
The example file exported as PDF from current master (28.20 KB, application/pdf)
2024-04-17 11:38 UTC, Gabor Kelemen (Collabora)
Details
The example file in the PAC tool (60.53 KB, image/png)
2024-04-17 11:44 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-04-17 11:35:25 UTC
Created attachment 193722 [details]
Example file with table caption

When a table has a caption added in Writer, the PDF/UA correctly exports that as a caption object next to the table. But the PAC tool shows there is no real connection between the two, the caption should wrap the table object.

1. Open attached example file
2. Export as PDF with the PDF/UA option enabled
3. Open the exported file in the PAC tool
-> Look into the Screen Reader Preview: the Caption objects don't wrap the Table object.

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d76f1877f699c91f5e4a020641c6d65064bfb997
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: default

Compare with second attachment that shows caption of an image: in PDF/UA export the caption wraps the image and alt text object.
Comment 1 Gabor Kelemen (Collabora) 2024-04-17 11:38:22 UTC
Created attachment 193723 [details]
The example file exported as PDF from current master
Comment 2 Gabor Kelemen (Collabora) 2024-04-17 11:44:21 UTC
Created attachment 193724 [details]
The example file in the PAC tool
Comment 3 Gabor Kelemen (Collabora) 2024-04-17 12:41:20 UTC
How it looks with an image caption is in bug 160707 - see attachment 193727 [details]
Comment 4 Buovjaga 2024-07-24 07:41:45 UTC
Reproduced when checking with PAC 2021.

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a7de9cc5e89cd0d0c2f6363b2c0cc265c528b121
CPU threads: 2; OS: Windows 11 X86_64 (10.0 build 22621); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-GB
Calc: threaded
Comment 5 Commit Notification 2025-02-21 11:28:36 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/accbfbc4a298cb811072ff78bda9425dd1af4e81

tdf#160705 PDF export: Set the table caption element inside the table

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.