tdf#160705 PDF export: Set the table caption element inside the table

According to the PDF standard, if a table has a caption, it must be
either the first or the last child within the table tag.
Therefore, if both above and below captions are set for the table, they will be exported as the table's first child.

Change-Id: Id4ee732d469d606b6ad49f68b34500bc1174c51e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181981
Tested-by: Jenkins
Reviewed-by: Nagy Tibor <tibor.nagy.extern@allotropia.de>